--- a/intento_api/apynb.ipynb
+++ b/intento_api/apynb.ipynb
@@ -24,8 +24,8 @@
    "outputs": [],
    "source": [
     "username = \"admin\"\n",
-    "password = \"huevosrotosconjamon\"\n",
-    "host = \"database-1.ct46wkioy0f3.us-east-1.rds.amazonaws.com\" \n",
+    "password = \"contrasenia\"\n",
+    "host = \"el host\" \n",
     "port = 3306\n",
     "\n",
     "db = pymysql.connect(host = host,\n",
